// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with one strategy 1`] = `
<div
  className="MuiPaper-root fullwidth MuiPaper-elevation1 MuiPaper-rounded"
  shadow={0}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "borderBottom": "1px solid #f9f9f9",
        "display": "flex",
        "marginBottom": "10px",
        "padding": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        className="headerTitle"
      >
        Strategies
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    >
      <button
        aria-describedby={null}
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Add new strategy"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            add
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemAvatar-root"
      >
        <span
          aria-hidden={true}
          className="material-icons MuiIcon-root"
        >
          extension
        </span>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <a
            href="/strategies/view/Another"
            onClick={[Function]}
          >
            <strong>
              Another
            </strong>
          </a>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          another's description
        </p>
      </div>
      <div
        aria-describedby={null}
        className=""
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        title="Deprecate activation strategy"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              visibility_off
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        aria-describedby={null}
        className=""
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        title="You cannot delete a built-in strategy"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled={true}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              delete
            </span>
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`renders correctly with one strategy without permissions 1`] = `
<div
  className="MuiPaper-root fullwidth MuiPaper-elevation1 MuiPaper-rounded"
  shadow={0}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "borderBottom": "1px solid #f9f9f9",
        "display": "flex",
        "marginBottom": "10px",
        "padding": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        className="headerTitle"
      >
        Strategies
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    />
  </div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemAvatar-root"
      >
        <span
          aria-hidden={true}
          className="material-icons MuiIcon-root"
        >
          extension
        </span>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <a
            href="/strategies/view/Another"
            onClick={[Function]}
          >
            <strong>
              Another
            </strong>
          </a>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          another's description
        </p>
      </div>
      <div
        aria-describedby={null}
        className=""
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        title="Deprecate activation strategy"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              visibility_off
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
  </ul>
</div>
`;
